--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,9 @@ jobs:
           name: Install tox
           command: 'sudo pip install tox'
       - run:
+          name: Install pylint pre for py37
+          command: 'sudo pip install --pre pylint astroid --upgrade'
+      - run:
           name: Test with tox
           command: 'tox -e py37'
 
