Try fix py37 pylint compat.

--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ commands =
 
 [testenv:py37]
 basepython={env:TOX_PYTHON_37}
+deps= -rdev-requirements-py37.txt
 commands =
     python --version
     python -m unittest tests.development.test_base_component
