--- a/tox.ini
+++ b/tox.ini
@@ -44,4 +44,4 @@ commands =
     python -m unittest tests.test_configs
 
     flake8 dash setup.py
-    pylint dash setup.py
+    pylint dash setup.py --disable=useless-object-inheritance,possibly-unused-variable,no-else-return
